[build-system]
requires = ["attrs == 22.2.0", "autopep8 == 2.0.0", 
"certifi == 2022.9.24", "charset-normalizer == 2.1.1", 
"click == 8.1.3", "colorama == 0.4.6", "docutils == 0.19", 
"exceptiongroup == 1.1.0", "numpy == 1.24.1", "pytest == 7.2.1", 
"PyYAML == 6.0", "pdoc == 12.3.1", "setuptools >= 40.8.0", "wheel == 0.38.4"]
build-backend = "setuptools.build_meta:__legacy__"

