[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
packages = ["bond_order_processing"]

[project]
name = "bond_order_processing"
version = "1.0.1"
authors = [
    {name = "Paweł Goj", email = "pawel.goj5@gmail.com"},
]
description = "Make environment to doc generation."
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

dependencies = [
    "attrs == 22.2.0", "autopep8 >= 2.0.0", 
    "certifi == 2022.9.24", "charset-normalizer == 2.1.1", 
    "click == 8.1.3", "colorama == 0.4.6", "docutils == 0.19", 
    "exceptiongroup == 1.1.0", "numpy == 1.24.1", "pytest == 7.2.1", 
    "PyYAML == 6.0", "pdoc == 12.3.1",
]
